# insurancemodel

./: Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: aws.yaml
notebook/: mongoDB_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  model_pusher.py
src/constants/: __init__.py
src/entity/: s3_estimator.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
